[package]
name = "tokio-io"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
bytes = { git = "https://github.com/carllerche/bytes" }
futures = { version = "0.1.11", default-features = false, features = ["use_std"] }
log = "0.3"

[features]
default = ["with-deprecated"]
with-deprecated = ["futures/with-deprecated"]
