[package]
name = "tokio-io"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio-io"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-io/0.1"
description = """
Core I/O primitives for asynchronous I/O in Rust.
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4"
futures = { version = "0.1.11", default-features = false, features = ["use_std"] }
log = "0.3"

[features]
default = ["with-deprecated"]
with-deprecated = ["futures/with-deprecated"]
